fix: add wrap property to lot cards

--- a/styles/style.css
+++ b/styles/style.css
@@ -153,11 +153,15 @@
 
 .lots__card-list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
+  row-gap: 25px;
+  column-gap: 25px;
   padding-top: 25px;
 }
 
 .lots__card-list-item {
+  flex-grow: 1;
   width: 334px;
   list-style: none;
 }
